--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     </header>
     <main class="graficos-section">
         <section id="graficos-container" class="graficos-container">
-            <!-- crie os gráficos/texto aqui -->
+            <p> um dois </p>
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por Gui Lima</p>
+        <p>Desenvolvido por Beanca Silva Sauro</p>
     </footer>
     <script type="module" src="graficos/common.js"></script>
     <script type="module" src="graficos/informacoesGlobais.js"></script>
