--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <main class="graficos-section">
         <section id="graficos-container" class="graficos-container">
-            <p> um dois </p>
+            <!-- crie os graficos aqui -->
         </section>
     </main>
     <footer>
