--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
     </header>
     <main class="graficos-section">
         <section id="graficos-container" class="graficos-container">
-            <!-- crie os graficos/ texto aqui -->
+            <!-- crie os gráficos/texto aqui -->
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por Beanca Silva Sauro</p>
+        <p>Desenvolvido por Gui Lima</p>
     </footer>
-    <script type="module" src="graficos/common.js"></script>
     <script type="module" src="graficos/informacoesGlobais.js"></script>
     <script type="module" src="graficos/quantidadeUsuarios.js"></script>
 </body>
